@@ -35,7 +35,7 @@ ADMIN="-Dofbiz.admin.port=$ADMIN_PORT -Dofbiz.admin.key=$ADMIN_KEY"
 #automatic IP address for linux
 #IPADDR=`/sbin/ifconfig eth0 | grep 'inet addr:' | cut -d: -f2 | awk '{ print $1}'`
 #RMIIF="-Djava.rmi.server.hostname=$IPADDR"
-MEMIF="-Xms128M -Xmx512M"
+MEMIF="-Xms128M -Xmx512M -XX:MaxPermSize=128m"
 #MISC="-Duser.language=en"
 VMARGS="$MEMIF $MISC $DEBUG $RMIIF $ADMIN"
 
